# CommSimCNN

./: .gitignore  README.md  pyproject.toml
commsimcnn/: __init__.py  cnn.py  models.py  simdataloader.py  util.py
notebooks/: test_notebook.ipynb  test_notebook2.ipynb  test_notebook3.ipynb
tests/: test_cnnmodel.py  test_simdataloader.py  test_util.py
