[project]
name = "commsimcnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "torch>=2.9.1",
  "torchvision>=0.24.1",
  "ipykernel>=7.1.0",
  "pytest>=9.0.2",
  "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true
