[project]
name = "commsimcnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ipykernel>=7.1.0",
  "matplotlib>=3.10.8",
  "pandas>=2.3.3",
  "pytest>=9.0.2",
  "torch>=2.9.1",
  "torchmetrics>=1.8.2",
  "torchvision>=0.24.1",
  "tqdm>=4.67.1",
]

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu126", marker = "sys_platform == 'linux'" },
]
